bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_wrong_item.stderr
error: Invalid pezpallet::storage, expect item type.
  --> tests/pezpallet_ui/storage_wrong_item.rs:36:2
   |
36 |     impl Foo {}
   |     ^^^^
